package com.ssafy.enjoytrip.global.aop;

public class LoggingAspect {

}
