@startuml
interface com.ssafy.enjoytrip.user.mapper.UserMapper {
~ void joinUser(UserDto)
~ UserDto loginUser(UserDto)
~ void updatePw(UserDto)
~ void updateNickname(UserDto)
~ void deleteUser(String)
}
interface com.ssafy.enjoytrip.plan.mapper.PlanMapper {
~ void addPlan(PlanDto)
~ List<PlanDto> getPlanList(String)
~ void deletePlan(String)
~ void updatePlan(PlanDto)
~ PlanDto getPlan(String)
~ void addRoute(String,List<Map<String,Object>>)
}
class com.ssafy.enjoytrip.attraction.dto.SidoDto {
- int sidoCode
- String sidoName
+ int getSidoCode()
+ void setSidoCode(int)
+ String getSidoName()
+ void setSidoName(String)
+ String toString()
}
class com.ssafy.enjoytrip.global.config.SwaggerConfiguration {
- String version
- String title
+ Docket api()
- Set<String> getConsumeContentTypes()
- Set<String> getProduceContentTypes()
- ApiInfo apiInfo()
}
class com.ssafy.enjoytrip.global.aop.LoggingAspect {
}
class com.ssafy.enjoytrip.user.service.UserServiceImpl {
- UserMapper userMapper
+ void joinUser(UserDto)
+ UserDto loginUser(UserDto)
+ UserDto getUserInfo(HttpSession)
+ void updatePw(UserDto)
+ void updateNickname(UserDto)
+ void deleteUser(String)
}
class com.ssafy.enjoytrip.plan.service.PlanServiceImpl {
- PlanMapper planMapper
+ void addPlan(PlanDto)
+ List<PlanDto> getPlanList(String)
+ void deletePlan(String)
+ void updatePlan(PlanDto)
+ PlanDto getPlan(String)
+ void addRoute(String,List<Map<String,Object>>)
}
class com.ssafy.enjoytrip.attraction.dto.GugunDto {
- int gugunCode
- String gugunName
- int sidoCode
+ int getGugunCode()
+ void setGugunCode(int)
+ String getGugunName()
+ void setGugunName(String)
+ int getSidoCode()
+ void setSidoCode(int)
+ String toString()
}
class com.ssafy.enjoytrip.user.controller.UserController {
- UserService userService
+ ResponseEntity<?> join(UserDto)
+ ResponseEntity<?> login(UserDto,HttpSession)
+ ResponseEntity<?> logout(HttpSession)
+ ResponseEntity<?> getUserInfo(HttpSession)
+ ResponseEntity<?> updatePw(String,HttpSession)
+ ResponseEntity<?> updateNickname(String,HttpSession)
+ ResponseEntity<?> deleteUser(String,HttpSession)
- ResponseEntity<String> exceptionHandling(Exception)
}
class com.ssafy.enjoytrip.plan.dto.PlanDto {
- int planId
- String userId
- String planTitle
- String startDate
- String endDate
- int complete
+ int getPlanId()
+ void setPlanId(int)
+ String getUserId()
+ void setUserId(String)
+ String getPlanTitle()
+ void setPlanTitle(String)
+ String getStartDate()
+ void setStartDate(String)
+ String getEndDate()
+ void setEndDate(String)
+ int getComplete()
+ void setComplete(int)
+ String toString()
}
class com.ssafy.enjoytrip.attraction.dto.AttractionDto {
- int attractionId
- int contentTypeId
- String title
- String addr1
- String addr2
- String zipcode
- String tel
- String firstImage
- String firstImage2
- int readcount
- int sidoCode
- int gugunCode
- double latitude
- double longitude
- String mlevel
+ int getAttractionId()
+ void setAttractionId(int)
+ int getContentTypeId()
+ void setContentTypeId(int)
+ String getTitle()
+ void setTitle(String)
+ String getAddr1()
+ void setAddr1(String)
+ String getAddr2()
+ void setAddr2(String)
+ String getZipcode()
+ void setZipcode(String)
+ String getTel()
+ void setTel(String)
+ String getFirstImage()
+ void setFirstImage(String)
+ String getFirstImage2()
+ void setFirstImage2(String)
+ int getSidoCode()
+ void setSidoCode(int)
+ int getGugunCode()
+ void setGugunCode(int)
+ double getLatitude()
+ void setLatitude(double)
+ double getLongitude()
+ void setLongitude(double)
+ int getReadcount()
+ void setReadcount(int)
+ String getMlevel()
+ void setMlevel(String)
+ String toString()
}
class com.ssafy.enjoytrip.EnjoytripApplication {
+ {static} void main(String[])
}
class com.ssafy.enjoytrip.plan.controller.PlanController {
- PlanService planService
+ ResponseEntity<?> addPlan(PlanDto)
+ ResponseEntity<?> getPlanList(String)
+ ResponseEntity<?> deletePlan(String)
+ ResponseEntity<?> updatePlan(PlanDto)
+ ResponseEntity<?> getPlan(String)
+ ResponseEntity<?> addRoute(String,Map<String,Object>)
- ResponseEntity<String> exceptionHandling(Exception)
}
interface com.ssafy.enjoytrip.plan.service.PlanService {
~ void addPlan(PlanDto)
~ List<PlanDto> getPlanList(String)
~ void deletePlan(String)
~ void updatePlan(PlanDto)
~ PlanDto getPlan(String)
~ void addRoute(String,List<Map<String,Object>>)
}
interface com.ssafy.enjoytrip.attraction.service.AttractionService {
~ List<SidoDto> getSidoList()
~ List<GugunDto> getGugunList()
~ List<AttractionDto> getAttractionList(Map<String,Object>)
~ List<AttractionDto> getHotplaceList(Map<String,Object>)
}
interface com.ssafy.enjoytrip.user.service.UserService {
~ void joinUser(UserDto)
~ UserDto loginUser(UserDto)
~ UserDto getUserInfo(HttpSession)
~ void updatePw(UserDto)
~ void updateNickname(UserDto)
~ void deleteUser(String)
}
class com.ssafy.enjoytrip.global.interceptor.ConfirmInterceptor {
}
class com.ssafy.enjoytrip.user.dto.UserDto {
- String id
- String name
- String nickname
- String pw
- String email
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ String getNickname()
+ void setNickname(String)
+ String getPw()
+ void setPw(String)
+ String getEmail()
+ void setEmail(String)
+ String toString()
}
class com.ssafy.enjoytrip.attraction.service.AttractionServiceImpl {
- AttractionMapper attractionMapper
+ List<SidoDto> getSidoList()
+ List<GugunDto> getGugunList()
+ List<AttractionDto> getAttractionList(Map<String,Object>)
+ List<AttractionDto> getHotplaceList(Map<String,Object>)
}
interface com.ssafy.enjoytrip.attraction.mapper.AttractionMapper {
~ List<SidoDto> getSidoList()
~ List<GugunDto> getGugunList()
~ List<AttractionDto> getAttractionList(Map<String,Object>)
~ List<AttractionDto> getHotplaceList(Map<String,Object>)
}
class com.ssafy.enjoytrip.attraction.controller.AttractionController {
- AttractionService attractionService
+ ResponseEntity<?> getAttractionList(Integer,Integer,Integer,String)
+ ResponseEntity<?> getSidoList()
+ ResponseEntity<?> getGugunList()
+ ResponseEntity<?> getHotplaceList(Integer,Integer,Integer,String)
- ResponseEntity<String> exceptionHandling(Exception)
}
class com.ssafy.enjoytrip.global.config.WebMvcConfiguration {
}


com.ssafy.enjoytrip.user.service.UserService <|.. com.ssafy.enjoytrip.user.service.UserServiceImpl
com.ssafy.enjoytrip.plan.service.PlanService <|.. com.ssafy.enjoytrip.plan.service.PlanServiceImpl
com.ssafy.enjoytrip.attraction.service.AttractionService <|.. com.ssafy.enjoytrip.attraction.service.AttractionServiceImpl
@enduml